force-app/main/default/objects/IManageMapping__c/IManageMapping__c.object-meta.xml
<CustomObject>
    <label>IManageMapping</label>
    <nameField>
        <label>IManageMapping__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IManageMappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>