force-app/main/default/objects/IManageMapping__c/fields/ClientIdField__c.field-meta.xml
<CustomField>
    <fullName>ClientIdField__c</fullName>
    <label>ClientIdField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>