force-app/main/default/objects/IManageMapping__c/fields/ClientNameField__c.field-meta.xml
<CustomField>
    <fullName>ClientNameField__c</fullName>
    <description>ClientName Field</description>
    <label>ClientNameField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>