force-app/main/default/objects/IManageMapping__c/fields/EntityClientIdObjectField__c.field-meta.xml
<CustomField>
    <fullName>EntityClientIdObjectField__c</fullName>
    <label>EntityClientIdObjectField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>