force-app/main/default/objects/IManageMapping__c/fields/EntityMatterIdObjectField__c.field-meta.xml
<CustomField>
    <fullName>EntityMatterIdObjectField__c</fullName>
    <label>EntityMatterIdObjectField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>