force-app/main/default/objects/IManageMapping__c/fields/EntityType__c.field-meta.xml
<CustomField>
    <fullName>EntityType__c</fullName>
    <label>EntityType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>