force-app/main/default/objects/IManageMapping__c/fields/MatterIdField__c.field-meta.xml
<CustomField>
    <fullName>MatterIdField__c</fullName>
    <label>MatterIdField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>