force-app/main/default/objects/IManageMapping__c/fields/MatterNameField__c.field-meta.xml
<CustomField>
    <fullName>MatterNameField__c</fullName>
    <description>MatterName Field</description>
    <label>MatterNameField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>